# axiom-py

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  README.md  pyproject.toml  shell.nix  simple_test_async.py  test_imports.py
.github/: dependabot.yaml
.github/workflows/: ci.yml  pr.yml  push.yml
axiom/: __init__.py  annotations.py  client.py  datasets.py  logging.py  tokens.py  users.py  util.py  version.py
axiom/query/: __init__.py  aggregation.py  filter.py  options.py  query.py  result.py
examples/: README.md  async_basic.py  async_concurrent.py  async_datasets.py  async_logging.py  client.py  client_example.py  create_dataset.py  delete_dataset.py  ingest.py  list_datasets.py  logger_example.py  main.py  pyproject.toml  query.py  query_legacy.py  structlog_example.py
features/: ASYNC_IMPLEMENTATION.md
src/axiom_py/: __init__.py  _error_handling.py  _http_client.py  annotations.py  annotations_async.py  client.py  client_async.py  dashboards.py  dashboards_async.py  datasets.py  datasets_async.py  logging.py  logging_async.py  structlog.py  structlog_async.py  tokens.py  tokens_async.py  users.py  users_async.py  util.py  version.py
src/axiom_py/query/: __init__.py  aggregation.py  result.py
tests/: __init__.py  helpers.py  simple_test_async.py  test_annotations.py  test_client.py  test_client_async.py  test_datasets.py  test_datasets_async.py  test_edge_integration.py  test_imports.py  test_logger.py
