[project]
name = "axiom-py"
version = "0.5.0"
description = "Official bindings for the Axiom API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "ujson>=5.10.0",
    "dacite>=1.8.1",
    "pyhumps>=3.8.0",
    "ndjson>=0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79 # PEP 8

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "pytest>=8.3.2",
    "responses>=0.25.3",
    "rfc3339>=6.2",
    "iso8601>=1.0.2",
]
