[project]
name = "axiom-py"
version = "0.9.1"
description = "Official bindings for the Axiom API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "iso8601>=1.0.2",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "ujson>=5.10.0",
    "dacite>=1.8.1",
    "pyhumps>=3.8.0",
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Logging",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://axiom.co"
Repository = "https://github.com/axiomhq/axiom-py.git"
Issues = "https://github.com/axiomhq/axiom-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79 # PEP 8

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "pytest>=8.3.2",
    "responses>=0.25.3",
    "rfc3339>=6.2",
    "iso8601>=1.0.2",
    "pre-commit>=3.5.0",
]
