[tool.poetry]
name = "axiom-py-examples"
version = "0.1"
description = "Axiom API Python bindings examples."
authors = ["Axiom, Inc."]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
axiom-py = { path = "../" }


[tool.poetry.dev-dependencies]
pylint = "^2.7.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
